--- a/views/movie.ejs
+++ b/views/movie.ejs
@@ -116,7 +116,7 @@
                                 </a>
                                 <% }); %>
                             </div>
-                            <% if (page.urls.movies.picture) { %>
+                            <% if (!page.urls.movies.picture) { %>
                             <link href="/themes/drogo/public/css/lightgallery.min.css" rel="stylesheet">
                             <script src="/themes/drogo/public/js/lightgallery.min.js"></script>
                             <script>lightGallery(document.getElementById('lightgallery'));</script>
