--- a/views/category.ejs
+++ b/views/category.ejs
@@ -145,7 +145,7 @@
                         <span class="podrobnee" style="padding: 4px 0 4px 20px;">
                             <a href="<%- movie.url %>">
                                 <span class="fbutton-img">
-                                    <img src="/themes/drogo/public/img/viewmore.png" alt="<%- movie.title %> (<%- movie.year %>)" border="0">
+                                    Открыть подробнее ...
                                 </span>
                             </a>
                         </span>
