--- a/views/index.ejs
+++ b/views/index.ejs
@@ -110,7 +110,7 @@
                             </a>
                         </span>
                         <% if (movie.premiere) { %>
-                        <span style="float:right; padding: 7px 20px 19px 20px;">
+                        <span style="float:right;padding: 4px 20px 20px;font-size: 12px;">
                             <span class="dateicon" title="Дата"><%- movie.premiere %></span>
                         </span>
                         <% } %>
