--- a/views/category.ejs
+++ b/views/category.ejs
@@ -205,7 +205,7 @@
                     <% } %>
 
                     <% if (page.seo) { %>
-                    <div style="margin: 20px 10px;">
+                    <div style="margin: 20px 10px;text-align: justify;">
                         <%- page.seo %>
                     </div>
                     <% } %>
