--- a/views/index.ejs
+++ b/views/index.ejs
@@ -157,7 +157,7 @@
                     <% } %>
 
                     <% if (page.seo) { %>
-                    <div style="margin: 20px 10px;">
+                    <div style="margin: 20px 10px;text-align: justify;">
                         <%- page.seo %>
                     </div>
                     <% } %>
