--- a/views/includes/left.ejs
+++ b/views/includes/left.ejs
@@ -50,7 +50,7 @@
     <div class="poloska_bloka"></div>
     <div style="padding: 7px 20px;
 position: relative;
-border-bottom: 1px solid #3f413f;"><i style="font-size:15px;">Скоро на сайте</i></div>
+border-bottom: 1px solid #3f413f;"><i style="font-size:15px;">Скоро премьеры</i></div>
     <div class="mimiserblock">
         <ul>
         <% soon.forEach(function (movie) { %>
