--- a/views/includes/footer.ejs
+++ b/views/includes/footer.ejs
@@ -9,7 +9,7 @@
 
     <div style="clear: both; float: none"></div>
 
-    <span style="float:left; padding-top: 12px; padding-left:3px;">
+    <span style="float:left; padding-top: 12px; padding-bottom: 12px;">
         <% if (page.social) { %>
         <span>
             <% if (page.social.vk) { %><a href="<%- page.social.vk %>" target="_blank">ВК</a><% } %>
@@ -23,7 +23,7 @@
         Email для связи: <%- page.email %>
     </span>
 
-    <div style="float:right;  text-align: right; width:300px; padding-top: 3px;">
+    <div style="float:right;  text-align: right; width:300px; padding-top: 12px; padding-bottom: 12px;">
         &copy;&nbsp;<%- new Date().getFullYear() %>&nbsp;<a href="https://cinemapress.org" target="_blank">CinemaPress&nbsp;ACMS</a>
     </div>
 
