--- a/views/download.ejs
+++ b/views/download.ejs
@@ -32,7 +32,7 @@
 						</span> »
                         <span>
 							<a href="<%- movie.url %>">
-								<%- movie.title %>
+								<%= movie.title %>
 							</a>
 						</span> »
                         Скачать
@@ -47,7 +47,7 @@
                     <div class="fullstory">
                         <div class="shortstorytitle">
                             <h1>
-                                <%- movie.title %> (<%- movie.year %>) скачать
+                                <%= movie.title %> (<%- movie.year %>) скачать
                             </h1>
                         </div>
                         <div class="fullimg" style="margin-right: 30px">
@@ -55,7 +55,7 @@
                                 <% if (movie.poster) { %>
                                 <a href="<%- movie.url %>" style="float: left">
                                     <div class="cinemapress-poster">
-                                        <img src="<%- movie.poster %>" style="width: 200px; height: 300px;" alt="<%- movie.title %> (<%- movie.year %>)" title="<%- movie.title %> (<%- movie.year %>)">
+                                        <img src="<%- movie.poster %>" style="width: 200px; height: 300px;" alt="<%= movie.title %> (<%- movie.year %>)" title="<%= movie.title %> (<%- movie.year %>)">
                                         <% if (movie.quality) { %>
                                         <div class="cinemapress-quality">
                                             <span class="cinemapress-svg-quality"></span>
@@ -105,7 +105,7 @@
                             <div style="clear: both"></div>
 
                             <div class="episodesListBlock" style="display: none; margin: 10px auto;">
-                                <h3><%- movie.title %> новые серии</h3>
+                                <h3><%= movie.title %> новые серии</h3>
                                 <div id="episodesList" data-id="<%- movie.kp_id %>"></div>
                             </div>
 
@@ -118,7 +118,7 @@
                                         ? movie.url + '/' + page.urls.movies.picture
                                         : picture.picture_big %>
                                 <a href="<%- ahref %>">
-                                    <img src="<%- picture.picture_min %>" alt="<%- movie.title %> (<%- movie.year %>)" title="<%- movie.title %> (<%- movie.year %>)">
+                                    <img src="<%- picture.picture_min %>" alt="<%= movie.title %> (<%- movie.year %>)" title="<%= movie.title %> (<%- movie.year %>)">
                                 </a>
                                 <% }); %>
                             </div>
@@ -133,7 +133,7 @@
 
                             <div class="stronk">
                                 <strong>
-                                    Скачать <%- movie.title %> (<%- movie.year %>)
+                                    Скачать <%= movie.title %> (<%- movie.year %>)
                                 </strong>
                             </div>
 
@@ -206,9 +206,9 @@
                 <div class="relatednews">
                     <ul class="ul_related"><% if (category.movies.length) {
                         category.movies.forEach(function (movie) { %><li>
-                            <a href="<%- movie.url %>" title="<%- movie.title %> (<%- movie.year %>)">
-                                <img src="<%- movie.poster %>" style="height:165px; width:110px" alt="<%- movie.title %>">
-                                <%- movie.title %> (<%- movie.year %>)
+                            <a href="<%- movie.url %>" title="<%= movie.title %> (<%- movie.year %>)">
+                                <img src="<%- movie.poster %>" style="height:165px; width:110px" alt="<%= movie.title %>">
+                                <%= movie.title %> (<%- movie.year %>)
                             </a>
                         </li><% }); } %>
                     </ul>
