--- a/views/movie.ejs
+++ b/views/movie.ejs
@@ -29,7 +29,7 @@
 							<%- movie.genre_url %>
 						</span> »
                         <% } %>
-                            <%- movie.title %>
+                            <%= movie.title %>
                     </div>
 
                     <% if (typeof page.adv === 'object' && page.adv.top) { %>
@@ -41,7 +41,7 @@
                     <div class="fullstory">
                         <div class="shortstorytitle">
                             <h1>
-                                <%- movie.title %> (<%- movie.year %>)
+                                <%= movie.title %> (<%- movie.year %>)
                             </h1>
                         </div>
                         <div class="fullimg" style="margin-right: 30px">
@@ -49,7 +49,7 @@
                                 <% if (movie.poster) { %>
                                 <a href="<%- movie.url %>" style="float: left">
                                     <div class="cinemapress-poster">
-                                        <img src="<%- movie.poster %>" style="width: 200px; height: 300px;" alt="<%- movie.title %> (<%- movie.year %>)" title="<%- movie.title %> (<%- movie.year %>)">
+                                        <img src="<%- movie.poster %>" style="width: 200px; height: 300px;" alt="<%= movie.title %> (<%- movie.year %>)" title="<%= movie.title %> (<%- movie.year %>)">
                                         <% if (movie.quality) { %>
                                         <div class="cinemapress-quality">
                                             <span class="cinemapress-svg-quality"></span>
@@ -99,7 +99,7 @@
                             <div style="clear: both"></div>
 
                             <div class="episodesListBlock" style="display: none; margin: 10px auto;">
-                                <h3><%- movie.title %> новые серии</h3>
+                                <h3><%= movie.title %> новые серии</h3>
                                 <div id="episodesList" data-id="<%- movie.kp_id %>"></div>
                             </div>
 
@@ -112,7 +112,7 @@
                                         ? movie.url + '/' + page.urls.movies.picture
                                         : picture.picture_big %>
                                 <a href="<%- ahref %>">
-                                    <img src="<%- picture.picture_min %>" alt="<%- movie.title %> (<%- movie.year %>)" title="<%- movie.title %> (<%- movie.year %>)">
+                                    <img src="<%- picture.picture_min %>" alt="<%= movie.title %> (<%- movie.year %>)" title="<%= movie.title %> (<%- movie.year %>)">
                                 </a>
                                 <% }); %>
                             </div>
@@ -127,7 +127,7 @@
 
                             <div class="stronk">
                                 <strong>
-                                    <%- movie.title %> (<%- movie.year %>)
+                                    <%= movie.title %> (<%- movie.year %>)
                                 </strong>
                             </div>
                         </div>
@@ -207,9 +207,9 @@
                 <div class="relatednews">
                     <ul class="ul_related"><% if (category.movies.length) {
                         category.movies.forEach(function (movie) { %><li>
-                            <a href="<%- movie.url %>" title="<%- movie.title %> (<%- movie.year %>)">
-                                <img src="<%- movie.poster %>" style="height:165px; width:110px" alt="<%- movie.title %>">
-                                <%- movie.title %> (<%- movie.year %>)
+                            <a href="<%- movie.url %>" title="<%= movie.title %> (<%- movie.year %>)">
+                                <img src="<%- movie.poster %>" style="height:165px; width:110px" alt="<%= movie.title %>">
+                                <%= movie.title %> (<%- movie.year %>)
                             </a>
                         </li><% }); } %>
                     </ul>
