--- a/views/picture.ejs
+++ b/views/picture.ejs
@@ -32,7 +32,7 @@
 						</span> »
                         <span>
 							<a href="<%- movie.url %>">
-								<%- movie.title %>
+								<%= movie.title %>
 							</a>
 						</span> »
                         Кадры
@@ -48,7 +48,7 @@
 
                         <div class="shortstorytitle">
                             <h1>
-                                <%- movie.title %> (<%- movie.year %>) кадры
+                                <%= movie.title %> (<%- movie.year %>) кадры
                             </h1>
                         </div>
 
@@ -57,7 +57,7 @@
                                 <% if (movie.poster) { %>
                                 <a href="<%- movie.url %>" style="float: left">
                                     <div class="cinemapress-poster">
-                                        <img src="<%- movie.poster %>" style="width: 200px; height: 300px;" alt="<%- movie.title %> (<%- movie.year %>)" title="<%- movie.title %> (<%- movie.year %>)">
+                                        <img src="<%- movie.poster %>" style="width: 200px; height: 300px;" alt="<%= movie.title %> (<%- movie.year %>)" title="<%= movie.title %> (<%- movie.year %>)">
                                         <% if (movie.quality) { %>
                                         <div class="cinemapress-quality">
                                             <span class="cinemapress-svg-quality"></span>
@@ -107,7 +107,7 @@
                             <div style="clear: both"></div>
 
                             <div class="episodesListBlock" style="display: none; margin: 10px auto;">
-                                <h3><%- movie.title %> новые серии</h3>
+                                <h3><%= movie.title %> новые серии</h3>
                                 <div id="episodesList" data-id="<%- movie.kp_id %>"></div>
                             </div>
 
@@ -115,7 +115,7 @@
 
                             <div class="stronk">
                                 <strong>
-                                    Кадры из <%- movie.title %> (<%- movie.year %>)
+                                    Кадры из <%= movie.title %> (<%- movie.year %>)
                                 </strong>
                             </div>
 
@@ -188,9 +188,9 @@
                 <div class="relatednews">
                     <ul class="ul_related"><% if (category.movies.length) {
                         category.movies.forEach(function (movie) { %><li>
-                            <a href="<%- movie.url %>" title="<%- movie.title %> (<%- movie.year %>)">
-                                <img src="<%- movie.poster %>" style="height:165px; width:110px" alt="<%- movie.title %>">
-                                <%- movie.title %> (<%- movie.year %>)
+                            <a href="<%- movie.url %>" title="<%= movie.title %> (<%- movie.year %>)">
+                                <img src="<%- movie.poster %>" style="height:165px; width:110px" alt="<%= movie.title %>">
+                                <%= movie.title %> (<%- movie.year %>)
                             </a>
                         </li><% }); } %>
                     </ul>
