--- a/views/categories.ejs
+++ b/views/categories.ejs
@@ -24,7 +24,7 @@
 								Главная
 							</a>
 						</span> »
-                        <%- page.title %>
+                        <%= page.title %>
                     </div>
 
                     <% if (typeof page.adv === 'object' && page.adv.top) { %>
@@ -34,7 +34,7 @@
                     <% } %>
 
                     <div style="margin: 10px auto; text-align: center">
-                        <h1><%- page.title %></h1>
+                        <h1><%= page.title %></h1>
                     </div>
 
                     <% if (typeof categories === 'object' && categories.length) { %>
@@ -43,9 +43,9 @@
                     <div style="float: left; width: 50%;">
                         <div style="margin: 0; padding: 10px">
                             <a href="<%- content.url %>" class="cinemapress-news">
-                                <img src="<%- content.image %>" class="cinemapress-news-image" alt="<%- content.title %>">
+                                <img src="<%- content.image %>" class="cinemapress-news-image" alt="<%= content.title %>">
                                 <div class="cinemapress-news-title">
-                                    <%- content.title %>
+                                    <%= content.title %>
                                 </div>
                             </a>
                         </div>
