--- a/views/category.ejs
+++ b/views/category.ejs
@@ -24,7 +24,7 @@
 								Главная
 							</a>
 						</span> »
-                        <%- page.title %>
+                        <%= page.title %>
                     </div>
 
                     <% if (typeof page.adv === 'object' && page.adv.top) { %>
@@ -35,7 +35,7 @@
 
                     <div style="margin: 10px auto; text-align: center">
 
-                        <h1><%- page.title %></h1>
+                        <h1><%= page.title %></h1>
 
                         <% if (typeof content === 'object') { %>
                         <div class="cinemapress-content">
