--- a/views/index.ejs
+++ b/views/index.ejs
@@ -25,7 +25,7 @@
                     <% } %>
 
                     <div style="margin: 10px auto; text-align: center">
-                        <h1><%- page.title %></h1>
+                        <h1><%= page.title %></h1>
                     </div>
 
                     <% if (typeof index === 'object') {
