--- a/views/download.ejs
+++ b/views/download.ejs
@@ -21,7 +21,7 @@
 
                 <div id="cinemapress-content">
 
-                    <div style="padding: 9px 10px 8px 20px; border-bottom: 1px solid #848480;">
+                    <div style="padding: 9px 10px 8px 20px;">
 						<span>
 							<a href="/">
 								Главная
