--- a/views/includes/left.ejs
+++ b/views/includes/left.ejs
@@ -1,6 +1,6 @@
 <div class="leftblok_contener">
 
-    <div style="padding: 7px 20px;position: relative;border-bottom: 1px solid #3f413f;">
+    <div style="padding: 7px 20px;position: relative;">
         <i style="font-size:15px;">Панель навигации</i>
     </div>
     <div class="leftblok_contener2">
