--- a/views/index.ejs
+++ b/views/index.ejs
@@ -33,7 +33,7 @@
                             if (index.hasOwnProperty(type) && index[type].length) {
                                 index[type].forEach(function (category) { %>
 
-                    <h2 style="padding: 7px 20px;position: relative;border-bottom: 1px solid #3f413f;"><%- category.name %></h2>
+                    <h2 style="padding: 7px 20px;position: relative;"><%- category.name %></h2>
 
                     <% if (category.movies.length) {
                         category.movies.forEach(function (movie) { %>
