--- a/views/includes/footer.ejs
+++ b/views/includes/footer.ejs
@@ -27,7 +27,7 @@
         &copy;&nbsp;<%- new Date().getFullYear() %>&nbsp;<a href="https://cinemapress.org" target="_blank">CinemaPress&nbsp;ACMS</a>
     </div>
 
-    <script type="text/javascript" src="/themes/drogo/public/js/all.js"></script>
+    <script src="/themes/drogo/public/js/all.js"></script>
 
     <%- page.codes.footer %>
 
