--- a/views/movie.ejs
+++ b/views/movie.ejs
@@ -162,8 +162,10 @@
 
                     <div style="clear:both"></div>
 
-                    <div class="box visible" style="width: 100%; height: 370px;">
+                    <div id="cinemapress-player" class="box visible">
+                        <% if (page.player) { %>
                         <%- page.player %>
+                        <% } %>
                     </div>
 
                 </div>
