--- a/views/online.ejs
+++ b/views/online.ejs
@@ -173,8 +173,10 @@
 
                     <div style="clear:both"></div>
 
-                    <div class="box visible" style="display: block; background: rgb(0, 0, 0); width: 100%; height: 370px;">
+                    <div id="cinemapress-player" class="box visible">
+                        <% if (page.player) { %>
                         <%- page.player %>
+                        <% } %>
                     </div>
 
                 </div>
