Added multilanguage, add H1, add version files

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -25,7 +25,7 @@
                     <% } %>
 
                     <div style="margin: 10px auto; text-align: center">
-                        <h1><%= page.title %></h1>
+                        <h1><%- page.h1 %></h1>
                     </div>
 
                     <% if (typeof index === 'object') {
@@ -40,7 +40,7 @@
                     <div class="shortstory">
                         <div class="shortstorytitle">
                             <h2 class="zagolovki">
-                                <a href="<%- movie.url %>"><%= movie.title %> (<% if (movie.season && movie.episode) { %><%- movie.season %> сезон <%- movie.episode %> серия<% } else { %><%- movie.year %><% } %>)</a>
+                                <a href="<%- movie.url %>"><%= movie.title %> (<% if (movie.season && movie.episode) { %><%- movie.season %> <%- page.l.season %> <%- movie.episode %> <%- page.l.episode %><% } else { %><%- movie.year %><% } %>)</a>
                             </h2>
                         </div>
                         <div class="shortimg">
@@ -71,28 +71,28 @@
                                 <% } %>
                                 <br><br>
                                 <% if (movie.kp_rating) { %>
-                                <b>КиноПоиск:</b> <%- movie.kp_rating/10 %> (<%- movie.kp_vote %> голосов)<br>
+                                <strong><%- page.l.kp %>:</strong> <%- movie.kp_rating/10 %> (<%- movie.kp_vote %> <%- page.l.votes %>)<br>
                                 <% } %>
                                 <% if (movie.imdb_rating) { %>
-                                <b>IMDb:</b> <%- movie.imdb_rating/10 %> (<%- movie.imdb_vote %> голосов)<br>
+                                <strong><%- page.l.imdb %>:</strong> <%- movie.imdb_rating/10 %> (<%- movie.imdb_vote %> <%- page.l.votes %>)<br>
                                 <% } %>
                                 <br>
                                 <% if (movie.year_url) { %>
-                                <b>Год выпуска:</b> <%- movie.year_url %><br>
+                                <strong><%- page.l.year %>:</strong> <%- movie.year_url %><br>
                                 <% } %>
                                 <% if (movie.countries_url) { %>
-                                <b>Страна:</b> <%- movie.countries_url %><br>
+                                <strong><%- page.l.countries %>:</strong> <%- movie.countries_url %><br>
                                 <% } %>
                                 <% if (movie.genres_url) { %>
-                                <b>Жанр:</b> <%- movie.genres_url %><br>
+                                <strong><%- page.l.genres %>:</strong> <%- movie.genres_url %><br>
                                 <% } %>
                                 <br>
                                 <% if (movie.directors_url) { %>
-                                <b>Режиссер:</b> <%- movie.directors_url %><br>
+                                <strong><%- page.l.directors %>:</strong> <%- movie.directors_url %><br>
                                 <% } %>
                                 <br>
                                 <% if (movie.actors_url) { %>
-                                <b>Актеры:</b> <%- movie.actors_url %><br>
+                                <strong><%- page.l.actors %>:</strong> <%- movie.actors_url %><br>
                                 <% } %>
                             </div>
                         </div>
@@ -105,13 +105,13 @@
                         <span class="podrobnee" style="padding: 4px 0 4px 20px;">
                             <a href="<%- movie.url %>">
                                 <span class="fbutton-img">
-                                    Открыть подробнее ...
+                                    <%- page.l.more %> ...
                                 </span>
                             </a>
                         </span>
                         <% if (movie.premiere) { %>
                         <span style="float:right;padding: 4px 20px 20px;font-size: 12px;">
-                            <span class="dateicon" title="Дата"><%- movie.premiere %></span>
+                            <span class="dateicon" title="<%- page.l.premiere %>"><%- movie.premiere %></span>
                         </span>
                         <% } %>
                     </div>
