--- a/views/categories.ejs
+++ b/views/categories.ejs
@@ -21,7 +21,7 @@
                     <div style="padding: 9px 10px 8px 20px;">
 						<span>
 							<a href="/">
-								Главная
+								<%- page.l.home %>
 							</a>
 						</span> »
                         <%= page.title %>
@@ -34,7 +34,7 @@
                     <% } %>
 
                     <div style="margin: 10px auto; text-align: center">
-                        <h1><%= page.title %></h1>
+                        <h1><%- page.h1 %></h1>
                     </div>
 
                     <% if (typeof categories === 'object' && categories.length) { %>
