--- a/views/category.ejs
+++ b/views/category.ejs
@@ -21,7 +21,7 @@
                     <div style="padding: 9px 10px 8px 20px;">
 						<span>
 							<a href="/">
-								Главная
+								<%- page.l.home %>
 							</a>
 						</span> »
                         <%= page.title %>
@@ -35,7 +35,7 @@
 
                     <div style="margin: 10px auto; text-align: center">
 
-                        <h1><%= page.title %></h1>
+                        <h1><%- page.h1 %></h1>
 
                         <% if (typeof content === 'object') { %>
                         <div class="cinemapress-content">
@@ -112,28 +112,28 @@
                                 <% } %>
                                 <br><br>
                                 <% if (movie.kp_rating) { %>
-                                <b>КиноПоиск:</b> <%- movie.kp_rating/10 %> (<%- movie.kp_vote %> голосов)<br>
+                                <strong><%- page.l.kp %>:</strong> <%- movie.kp_rating/10 %> (<%- movie.kp_vote %> <%- page.l.votes %>)<br>
                                 <% } %>
                                 <% if (movie.imdb_rating) { %>
-                                <b>IMDb:</b> <%- movie.imdb_rating/10 %> (<%- movie.imdb_vote %> голосов)<br>
+                                <strong><%- page.l.imdb %>:</strong> <%- movie.imdb_rating/10 %> (<%- movie.imdb_vote %> <%- page.l.votes %>)<br>
                                 <% } %>
                                 <br>
                                 <% if (movie.year_url) { %>
-                                <b>Год выпуска:</b> <%- movie.year_url %><br>
+                                <strong><%- page.l.year %>:</strong> <%- movie.year_url %><br>
                                 <% } %>
                                 <% if (movie.countries_url) { %>
-                                <b>Страна:</b> <%- movie.countries_url %><br>
+                                <strong><%- page.l.countries %>:</strong> <%- movie.countries_url %><br>
                                 <% } %>
                                 <% if (movie.genres_url) { %>
-                                <b>Жанр:</b> <%- movie.genres_url %><br>
+                                <strong><%- page.l.genres %>:</strong> <%- movie.genres_url %><br>
                                 <% } %>
                                 <br>
                                 <% if (movie.directors_url) { %>
-                                <b>Режиссер:</b> <%- movie.directors_url %><br>
+                                <strong><%- page.l.directors %>:</strong> <%- movie.directors_url %><br>
                                 <% } %>
                                 <br>
                                 <% if (movie.actors_url) { %>
-                                <b>Актеры:</b> <%- movie.actors_url %><br>
+                                <strong><%- page.l.actors %>:</strong> <%- movie.actors_url %><br>
                                 <% } %>
                             </div>
                         </div>
@@ -145,13 +145,13 @@
                         <span class="podrobnee" style="padding: 4px 0 4px 20px;">
                             <a href="<%- movie.url %>">
                                 <span class="fbutton-img">
-                                    Открыть подробнее ...
+                                    <%- page.l.more %> ...
                                 </span>
                             </a>
                         </span>
                         <% if (movie.premiere) { %>
                         <span style="float:right;padding: 4px 20px 20px;font-size: 12px;">
-                            <span class="dateicon" title="Дата"><%- movie.premiere %></span>
+                            <span class="dateicon" title="<%- page.l.premiere %>"><%- movie.premiere %></span>
                         </span>
                         <% } %>
                     </div>
