--- a/views/download.ejs
+++ b/views/download.ejs
@@ -24,7 +24,7 @@
                     <div style="padding: 9px 10px 8px 20px;">
 						<span>
 							<a href="/">
-								Главная
+								<%- page.l.home %>
 							</a>
 						</span> »
                         <span>
@@ -35,7 +35,7 @@
 								<%= movie.title %>
 							</a>
 						</span> »
-                        Скачать
+                        <%- page.l.download %>
                     </div>
 
                     <% if (typeof page.adv === 'object' && page.adv.top) { %>
@@ -46,16 +46,14 @@
 
                     <div class="fullstory">
                         <div class="shortstorytitle">
-                            <h1>
-                                <%= movie.title %> (<%- movie.year %>) скачать
-                            </h1>
+                            <h1><%- page.h1 %></h1>
                         </div>
                         <div class="fullimg" style="margin-right: 30px">
                             <div style="display:inline;">
                                 <% if (movie.poster) { %>
                                 <a href="<%- movie.url %>" style="float: left">
                                     <div class="cinemapress-poster">
-                                        <img src="<%- movie.poster %>" style="width: 200px; height: 300px;" alt="<%= movie.title %> (<%- movie.year %>)" title="<%= movie.title %> (<%- movie.year %>)">
+                                        <img src="<%- movie.poster %>" style="width: 200px; height: 300px;" alt="<%= page.title %>" title="<%= page.title %>" id="cinemapress-poster">
                                         <% if (movie.quality) { %>
                                         <div class="cinemapress-quality">
                                             <span class="cinemapress-svg-quality"></span>
@@ -78,34 +76,34 @@
                                 <% } %>
                                 <br>
                                 <% if (movie.kp_rating) { %>
-                                <b>КиноПоиск:</b> <%- movie.kp_rating/10 %> (<%- movie.kp_vote %> голосов)<br>
+                                <strong><%- page.l.kp %>:</strong> <%- movie.kp_rating/10 %> (<%- movie.kp_vote %> <%- page.l.votes %>)<br>
                                 <% } %>
                                 <% if (movie.imdb_rating) { %>
-                                <b>IMDb:</b> <%- movie.imdb_rating/10 %> (<%- movie.imdb_vote %> голосов)<br>
+                                <strong><%- page.l.imdb %>:</strong> <%- movie.imdb_rating/10 %> (<%- movie.imdb_vote %> <%- page.l.votes %>)<br>
                                 <% } %>
                                 <br>
                                 <% if (movie.year_url) { %>
-                                <b>Год выпуска:</b> <%- movie.year_url %><br>
+                                <strong><%- page.l.year %>:</strong> <%- movie.year_url %><br>
                                 <% } %>
                                 <% if (movie.countries_url) { %>
-                                <b>Страна:</b> <%- movie.countries_url %><br>
+                                <strong><%- page.l.countries %>:</strong> <%- movie.countries_url %><br>
                                 <% } %>
                                 <% if (movie.genres_url) { %>
-                                <b>Жанр:</b> <%- movie.genres_url %><br>
+                                <strong><%- page.l.genres %>:</strong> <%- movie.genres_url %><br>
                                 <% } %>
                                 <br>
                                 <% if (movie.directors_url) { %>
-                                <b>Режиссер:</b> <%- movie.directors_url %><br>
+                                <strong><%- page.l.directors %>:</strong> <%- movie.directors_url %><br>
                                 <% } %>
                                 <% if (movie.actors_url) { %>
-                                <b>Актеры:</b> <%- movie.actors_url %><br>
+                                <strong><%- page.l.actors %>:</strong> <%- movie.actors_url %><br>
                                 <% } %>
                             </div>
 
                             <div style="clear: both"></div>
 
                             <div class="episodesListBlock" style="display: none; margin: 10px auto;">
-                                <h3><%= movie.title %> новые серии</h3>
+                                <h3><%= movie.title %> <%- page.l.episodes %></h3>
                                 <div id="episodesList" data-id="<%- movie.kp_id %>"></div>
                             </div>
 
@@ -133,7 +131,7 @@
 
                             <div class="stronk">
                                 <strong>
-                                    Скачать <%= movie.title %> (<%- movie.year %>)
+                                    <%- page.l.download %> <%= movie.title %> (<%- movie.year %>)
                                 </strong>
                             </div>
 
@@ -155,13 +153,13 @@
 
                     <div class="tabs">
                         <% if (page.urls.movies.online) { %>
-                        <a href="<%- movie.url %>/<%- page.urls.movies.online %>">Онлайн</a>
+                        <a href="<%- movie.url %>/<%- page.urls.movies.online %>"><%- page.l.online %></a>
                         <% } %>
                         <% if (page.urls.movies.download) { %>
-                        <a href="<%- movie.url %>/<%- page.urls.movies.download %>" class="current">Скачать</a>
+                        <a href="<%- movie.url %>/<%- page.urls.movies.download %>" class="current"><%- page.l.download %></a>
                         <% } %>
                         <% if (page.urls.movies.trailer) { %>
-                        <a href="<%- movie.url %>/<%- page.urls.movies.trailer %>">Трейлер</a>
+                        <a href="<%- movie.url %>/<%- page.urls.movies.trailer %>"><%- page.l.trailer %></a>
                         <% } %>
                     </div>
 
