--- a/views/includes/header.ejs
+++ b/views/includes/header.ejs
@@ -1,19 +1,19 @@
 <div class="header">
     <div class="header44">
         <div class="main_menu">
-            <a href="/"><img src="/themes/drogo/public/images/logo.png" style="height: 26px" alt="LOGO"></a>
+            <a href="/"><img src="/themes/drogo/public/images/logo.png?v=<%- page.ver %>" style="height: 26px" alt="LOGO"></a>
         </div>
         <div class="user_panel">
             <div class="loginin continueViewingBlock" style="display: none;">
-                <a href="javascript:void(0)" id="continueViewing">На чем остановились?</a>
+                <a href="javascript:void(0)" id="continueViewing"><%- page.l.continue %>?</a>
             </div>
         </div>
         <div class="search_panel">
             <div class="searchbar">
                 <form action="/<%- page.urls.search %>/title" name="searchform" method="get">
-                    <input name="q" placeholder="Название" type="text">
-                    <button class="fbutton2" type="submit" title="Найти" style="float: right;">
-                        Найти
+                    <input name="q" placeholder="<%- page.l.movieTitle %>" type="text">
+                    <button class="fbutton2" type="submit" title="<%- page.l.search %>" style="float: right;">
+                        <%- page.l.search %>
                     </button>
                 </form>
             </div>
@@ -28,16 +28,16 @@
                         <tbody>
                         <tr>
                             <td class="item">
-                                <a href="/"><span class="name">Главная</span></a>
+                                <a href="/"><span class="name"><%- page.l.home %></span></a>
                             </td>
                             <td class="item">
-                                <a href="/<%- page.urls.year %>/2017"><span class="name">Новинки</span></a>
+                                <a href="/<%- page.urls.year %>/2018"><span class="name"><%- page.l.premieres %></span></a>
                             </td>
                             <td class="item">
-                                <a href="/<%- page.urls.type %>/<%- page.urls.types.serial %>"><span class="name">Сериалы</span></a>
+                                <a href="/<%- page.urls.type %>/<%- page.urls.types.serial %>"><span class="name"><%- page.l.series %></span></a>
                             </td>
                             <td class="item">
-                                <a href="/<%- page.urls.content %>?tag=Коллекция"><span class="name">Коллекции</span></a>
+                                <a href="/<%- page.urls.content %>?tag=<%- page.l.collections %>"><span class="name"><%- page.l.collections %></span></a>
                             </td>
                         </tr>
                         </tbody>
