--- a/views/category.ejs
+++ b/views/category.ejs
@@ -59,19 +59,35 @@
                         <div style="clear: both;"></div>
                         <% } %>
 
-                        <br><br>
+                        <br>
 
-                        <% if (typeof page.sorting === 'object') {
-                            page.sorting.forEach(function (sort) { %>
-                        <% if (sort.active) { %>
-                        <a href="<%- sort.url %>" style="font-size: 11px;">
-                            <strong><%- sort.name %></strong>
-                        </a>
-                        <% } else { %>
-                        <a href="<%- sort.url %>" style="font-size: 11px;">
-                            <%- sort.name %>
-                        </a>
-                        <% } }); } %>
+                        <div class="randomMovieCategory">
+                            <div class="cinemapress-random-category"
+                                 onclick="window.location.href='<%- page.url %>?random'">
+                                <img src="/themes/drogo/public/images/dice.svg" alt="<%- page.l.random %>">
+                                <span><%- page.l.lucky %></span>
+                                <small><%- page.l.random %></small>
+                            </div>
+                        </div>
+
+                        <br>
+
+                        <div style="clear: both;"></div>
+
+                        <% if (typeof page.sorting === 'object') { %>
+                        <div class="cinemapress-sort">
+                            <% page.sorting.forEach(function (sort) { %>
+                            <% if (sort.active) { %>
+                            <a href="<%- sort.url %>" class="cinemapress-sort-active">
+                                <%- sort.name %>
+                            </a>
+                            <% } else { %>
+                            <a href="<%- sort.url %>">
+                                <%- sort.name %>
+                            </a>
+                            <% } }); %>
+                        </div>
+                        <% } %>
 
                     </div>
 
@@ -80,9 +96,9 @@
 
                     <div class="shortstory">
                         <div class="shortstorytitle">
-                            <h2 class="zagolovki">
+                            <h3 class="zagolovki">
                                 <a href="<%- movie.url %>"><%= movie.title %> (<%- movie.year %>)</a>
-                            </h2>
+                            </h3>
                         </div>
                         <div class="shortimg">
                             <div style="display:inline;">
