--- a/views/episode.ejs
+++ b/views/episode.ejs
@@ -171,8 +171,10 @@
 
                     <div style="clear:both"></div>
 
-                    <div class="box visible" style="display: block; background: rgb(0, 0, 0); width: 100%; height: 370px;">
-                        <%- page.player %>
+                    <div id="cinemapress-player" class="box visible">
+                        <% if (page.player) { %>
+                            <%- page.player %>
+                        <% } %>
                     </div>
 
                 </div>
@@ -205,9 +207,17 @@
                 movies[type].forEach(function (category) { %>
                 <div class="relatednews_title">
                     <i><span class="selection_index"></span><%- category.name %></i>
+                    <div class="randomMovieRelated">
+                        <div class="cinemapress-random-related"
+                             onclick="window.location.href='<%- category.url %>?random'"
+                             title="<%- page.l.random %>">
+                            <img src="/themes/drogo/public/images/dice.svg" alt="<%- page.l.random %>">
+                        </div>
+                    </div>
                 </div>
                 <div class="relatednews">
                     <ul class="ul_related"><% if (category.movies.length) {
+                        category.movies.splice(5, category.movies.length % 5);
                         category.movies.forEach(function (movie) { %><li>
                             <a href="<%- movie.url %>" title="<%= movie.title %> (<%- movie.year %>)">
                                 <img src="<%- movie.poster %>" style="height:165px; width:110px" alt="<%= movie.title %>">
