--- a/views/includes/footer.ejs
+++ b/views/includes/footer.ejs
@@ -14,8 +14,8 @@
         <span>
             <% if (page.social.vk) { %><a href="<%- page.social.vk %>" target="_blank"><%- page.l.vk %></a><% } %>
             <% if (page.social.facebook) { %><span> • </span><a href="<%- page.social.facebook %>" target="_blank">facebook</a><% } %>
+            <% if (page.social.telegram) { %><span> • </span><a href="<%- page.social.telegram %>" target="_blank"><%- page.l.telegram %></a><% } %>
             <% if (page.social.twitter) { %><span> • </span><a href="<%- page.social.twitter %>" target="_blank">twitter</a><% } %>
-            <% if (page.social.gplus) { %><span> • </span><a href="<%- page.social.gplus %>" target="_blank">G+</a><% } %>
             <% if (page.social.youtube) { %><span> • </span><a href="<%- page.social.youtube %>" target="_blank"><%- page.l.youtube %></a><% } %>
             <% if (page.social.instagram) { %><span> • </span><a href="<%- page.social.instagram %>" target="_blank"><%- page.l.instagram %></a><% } %>
         </span>
@@ -24,10 +24,10 @@
     </span>
 
     <div style="float:right;  text-align: right; width:300px; padding-top: 12px; padding-bottom: 12px;">
-        &copy;&nbsp;<%- new Date().getFullYear() %>&nbsp;<a href="https://cinemapress.org" target="_blank">CinemaPress&nbsp;ACMS</a>
+        &copy;&nbsp;<%- new Date().getFullYear() %>&nbsp;<a href="https://cinemapress.io" target="_blank">CinemaPress</a>
     </div>
 
-    <script src="/themes/drogo/public/js/all.js"></script>
+    <script src="/themes/drogo/public/js/all.min.js"></script>
 
     <%- page.codes.footer %>
 
