--- a/views/includes/header.ejs
+++ b/views/includes/header.ejs
@@ -1,20 +1,28 @@
 <div class="header">
     <div class="header44">
         <div class="main_menu">
-            <a href="/"><img src="/themes/drogo/public/images/logo.png?v=<%- page.ver %>" style="height: 26px" alt="LOGO"></a>
+            <a href="/"><img src="/themes/drogo/public/images/logo.png?v=<%- page.ver %>" style="height: 26px" alt="Logo"></a>
         </div>
         <div class="user_panel">
             <div class="loginin continueViewingBlock" style="display: none;">
                 <a href="javascript:void(0)" id="continueViewing"><%- page.l.continue %>?</a>
             </div>
         </div>
+        <div class="randomMovieMenu">
+            <div class="user_panel">
+                <div class="loginin cinemapress-random-menu">
+                    <a href="/?random" title="<%- page.l.lucky %>"><%- page.l.lucky %></a>
+                </div>
+            </div>
+        </div>
         <div class="search_panel">
             <div class="searchbar">
-                <form action="/<%- page.urls.search %>/title" name="searchform" method="get">
-                    <input name="q" placeholder="<%- page.l.movieTitle %>" type="text">
+                <form action="/<%- page.urls.search %>" name="searchform" method="get">
+                    <input name="q" placeholder="<%- page.l.movieTitle %>" type="text" data-autocomplete="desktop">
                     <button class="fbutton2" type="submit" title="<%- page.l.search %>" style="float: right;">
                         <%- page.l.search %>
                     </button>
+                    <div class="cinemapress-autocomplete" data-autocomplete="desktop"></div>
                 </form>
             </div>
         </div>
