--- a/views/movie.ejs
+++ b/views/movie.ejs
@@ -162,7 +162,7 @@
 
                     <div id="cinemapress-player" class="box visible">
                         <% if (page.player) { %>
-                        <%- page.player %>
+                            <%- page.player %>
                         <% } %>
                     </div>
 
@@ -202,9 +202,17 @@
                 movies[type].forEach(function (category) { %>
                 <div class="relatednews_title">
                     <i><span class="selection_index"></span><%- category.name %></i>
+                    <div class="randomMovieRelated">
+                        <div class="cinemapress-random-related"
+                             onclick="window.location.href='<%- category.url %>?random'"
+                             title="<%- page.l.random %>">
+                            <img src="/themes/drogo/public/images/dice.svg" alt="<%- page.l.random %>">
+                        </div>
+                    </div>
                 </div>
                 <div class="relatednews">
                     <ul class="ul_related"><% if (category.movies.length) {
+                        category.movies.splice(5, category.movies.length % 5);
                         category.movies.forEach(function (movie) { %><li>
                             <a href="<%- movie.url %>" title="<%= movie.title %> (<%- movie.year %>)">
                                 <img src="<%- movie.poster %>" style="height:165px; width:110px" alt="<%= movie.title %>">
