--- a/views/picture.ejs
+++ b/views/picture.ejs
@@ -39,9 +39,9 @@
                     </div>
 
                     <% if (typeof page.adv === 'object' && page.adv.top) { %>
-                    <div style="text-align: center; margin: 10px auto">
-                        <%- page.adv.top %>
-                    </div>
+                        <div style="text-align: center; margin: 10px auto">
+                            <%- page.adv.top %>
+                        </div>
                     <% } %>
 
                     <div class="fullstory">
@@ -53,52 +53,52 @@
                         <div class="fullimg" style="margin-right: 30px">
                             <div style="display:inline;">
                                 <% if (movie.poster) { %>
-                                <a href="<%- movie.url %>" style="float: left">
-                                    <div class="cinemapress-poster">
-                                        <img src="<%- movie.poster %>" style="width: 200px; height: 300px;" alt="<%= page.title %>" title="<%= page.title %>" id="cinemapress-poster">
-                                        <% if (movie.quality) { %>
-                                        <div class="cinemapress-quality">
-                                            <span class="cinemapress-svg-quality"></span>
-                                            <%- movie.quality %>
+                                    <a href="<%- movie.url %>" style="float: left">
+                                        <div class="cinemapress-poster">
+                                            <img src="<%- movie.poster %>" style="width: 200px; height: 300px;" alt="<%= page.title %>" title="<%= page.title %>" id="cinemapress-poster">
+                                            <% if (movie.quality) { %>
+                                                <div class="cinemapress-quality">
+                                                    <span class="cinemapress-svg-quality"></span>
+                                                    <%- movie.quality %>
+                                                </div>
+                                            <% } %>
+                                            <% if (movie.translate) { %>
+                                                <div class="cinemapress-translate">
+                                                    <span class="cinemapress-svg-translate"></span>
+                                                    <%- movie.translate %>
+                                                </div>
+                                            <% } %>
                                         </div>
-                                        <% } %>
-                                        <% if (movie.translate) { %>
-                                        <div class="cinemapress-translate">
-                                            <span class="cinemapress-svg-translate"></span>
-                                            <%- movie.translate %>
-                                        </div>
-                                        <% } %>
-                                    </div>
-                                </a>
+                                    </a>
                                 <% } %>
                                 <% if (page.seo) { %>
-                                <div style="text-align: justify;">
-                                    <%- page.seo %>
-                                </div>
+                                    <div style="text-align: justify;">
+                                        <%- page.seo %>
+                                    </div>
                                 <% } %>
                                 <br>
                                 <% if (movie.kp_rating) { %>
-                                <strong><%- page.l.kp %>:</strong> <%- movie.kp_rating/10 %> (<%- movie.kp_vote %> <%- page.l.votes %>)<br>
+                                    <strong><%- page.l.kp %>:</strong> <%- movie.kp_rating / 10 %> (<%- movie.kp_vote %> <%- page.l.votes %>)<br>
                                 <% } %>
                                 <% if (movie.imdb_rating) { %>
-                                <strong><%- page.l.imdb %>:</strong> <%- movie.imdb_rating/10 %> (<%- movie.imdb_vote %> <%- page.l.votes %>)<br>
+                                    <strong><%- page.l.imdb %>:</strong> <%- movie.imdb_rating / 10 %> (<%- movie.imdb_vote %> <%- page.l.votes %>)<br>
                                 <% } %>
                                 <br>
                                 <% if (movie.year_url) { %>
-                                <strong><%- page.l.year %>:</strong> <%- movie.year_url %><br>
+                                    <strong><%- page.l.year %>:</strong> <%- movie.year_url %><br>
                                 <% } %>
                                 <% if (movie.countries_url) { %>
-                                <strong><%- page.l.countries %>:</strong> <%- movie.countries_url %><br>
+                                    <strong><%- page.l.countries %>:</strong> <%- movie.countries_url %><br>
                                 <% } %>
                                 <% if (movie.genres_url) { %>
-                                <strong><%- page.l.genres %>:</strong> <%- movie.genres_url %><br>
+                                    <strong><%- page.l.genres %>:</strong> <%- movie.genres_url %><br>
                                 <% } %>
                                 <br>
                                 <% if (movie.directors_url) { %>
-                                <strong><%- page.l.directors %>:</strong> <%- movie.directors_url %><br>
+                                    <strong><%- page.l.directors %>:</strong> <%- movie.directors_url %><br>
                                 <% } %>
                                 <% if (movie.actors_url) { %>
-                                <strong><%- page.l.actors %>:</strong> <%- movie.actors_url %><br>
+                                    <strong><%- page.l.actors %>:</strong> <%- movie.actors_url %><br>
                                 <% } %>
                             </div>
 
@@ -126,86 +126,99 @@
                 <div style="clear: both"></div>
 
                 <% if (typeof page.adv === 'object' && page.adv.over) { %>
-                <div style="text-align: center; margin: 10px auto">
-                    <%- page.adv.over %>
-                </div>
+                    <div style="text-align: center; margin: 10px auto">
+                        <%- page.adv.over %>
+                    </div>
                 <% } %>
 
                 <div class="section">
 
                     <div class="tabs">
                         <% if (page.urls.movies.online) { %>
-                        <a href="<%- movie.url %>/<%- page.urls.movies.online %>"><%- page.l.online %></a>
+                            <a href="<%- movie.url %>/<%- page.urls.movies.online %>"><%- page.l.online %></a>
                         <% } %>
                         <% if (page.urls.movies.download) { %>
-                        <a href="<%- movie.url %>/<%- page.urls.movies.download %>"><%- page.l.download %></a>
+                            <a href="<%- movie.url %>/<%- page.urls.movies.download %>"><%- page.l.download %></a>
                         <% } %>
                         <% if (page.urls.movies.trailer) { %>
-                        <a href="<%- movie.url %>/<%- page.urls.movies.trailer %>"><%- page.l.trailer %></a>
+                            <a href="<%- movie.url %>/<%- page.urls.movies.trailer %>"><%- page.l.trailer %></a>
                         <% } %>
                     </div>
 
                     <div style="clear:both"></div>
 
-                    <div class="box visible" style="display: block; background: rgb(0, 0, 0); ">
-                        <%- page.player %>
+                    <div id="cinemapress-player" class="box visible">
+                        <% if (page.player) { %>
+                            <%- page.player %>
+                        <% } %>
                     </div>
 
                 </div>
 
                 <% if (typeof page.adv === 'object' && page.adv.under) { %>
-                <div style="text-align: center; margin: 10px auto">
-                    <%- page.adv.under %>
-                </div>
+                    <div style="text-align: center; margin: 10px auto">
+                        <%- page.adv.under %>
+                    </div>
                 <% } %>
 
                 <% if (typeof contents === 'object' && contents.length) { %>
-                <div style="clear: both"></div>
-                <% contents.forEach(function (content) { %>
-                <div style="float: left; width: 50%;">
-                    <div style="margin: 0; padding: 10px">
-                        <a href="<%- content.url %>" class="cinemapress-news" style="background-image:url(<%- content.image %>);">
-                            <div class="cinemapress-news-title">
-                                <%= content.title %>
+                    <div style="clear: both"></div>
+                    <% contents.forEach(function (content) { %>
+                        <div style="float: left; width: 50%;">
+                            <div style="margin: 0; padding: 10px">
+                                <a href="<%- content.url %>" class="cinemapress-news" style="background-image:url(<%- content.image %>);">
+                                    <div class="cinemapress-news-title">
+                                        <%= content.title %>
+                                    </div>
+                                </a>
                             </div>
-                        </a>
-                    </div>
-                </div>
-                <% }); %>
-                <div style="clear: both"></div>
+                        </div>
+                    <% }); %>
+                    <div style="clear: both"></div>
                 <% } %>
 
                 <% if (typeof movies === 'object') {
                         for (var type in movies) {
                 if (movies.hasOwnProperty(type) && movies[type].length) {
                 movies[type].forEach(function (category) { %>
-                <div class="relatednews_title">
-                    <i><span class="selection_index"></span><%- category.name %></i>
-                </div>
-                <div class="relatednews">
-                    <ul class="ul_related"><% if (category.movies.length) {
-                        category.movies.forEach(function (movie) { %><li>
-                            <a href="<%- movie.url %>" title="<%= movie.title %> (<%- movie.year %>)">
-                                <img src="<%- movie.poster %>" style="height:165px; width:110px" alt="<%= movie.title %>">
-                                <%= movie.title %> (<%- movie.year %>)
-                            </a>
-                        </li><% }); } %>
-                    </ul>
-                </div>
+                    <div class="relatednews_title">
+                        <i><span class="selection_index"></span><%- category.name %></i>
+                        <div class="randomMovieRelated">
+                            <div class="cinemapress-random-related"
+                                 onclick="window.location.href='<%- category.url %>?random'"
+                                 title="<%- page.l.random %>">
+                                <img src="/themes/drogo/public/images/dice.svg" alt="<%- page.l.random %>">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="relatednews">
+                        <ul class="ul_related">
+                            <% if (category.movies.length) {
+                            category.movies.splice(5, category.movies.length % 5);
+                            category.movies.forEach(function (movie) { %>
+                                <li>
+                                    <a href="<%- movie.url %>" title="<%= movie.title %> (<%- movie.year %>)">
+                                        <img src="<%- movie.poster %>" style="height:165px; width:110px" alt="<%= movie.title %>">
+                                        <%= movie.title %> (<%- movie.year %>)
+                                    </a>
+                                </li>
+                            <% }); } %>
+                        </ul>
+                    </div>
                 <% }); } } } %>
 
                 <div style="clear:both;"></div>
 
                 <% if (page.comments) { %>
-                <div style="padding: 10px;">
-                    <%- page.comments %>
-                </div>
+                    <div style="padding: 10px;">
+                        <%- page.comments %>
+                    </div>
                 <% } %>
 
                 <% if (typeof page.adv === 'object' && page.adv.bottom) { %>
-                <div style="text-align: center; margin: 10px auto">
-                    <%- page.adv.bottom %>
-                </div>
+                    <div style="text-align: center; margin: 10px auto">
+                        <%- page.adv.bottom %>
+                    </div>
                 <% } %>
 
             </div>
