--- a/views/includes/footer.ejs
+++ b/views/includes/footer.ejs
@@ -27,7 +27,7 @@
         &copy;&nbsp;<%- new Date().getFullYear() %>&nbsp;<a href="https://cinemapress.io" target="_blank">CinemaPress</a>
     </div>
 
-    <script src="/themes/drogo/public/js/all.min.js"></script>
+    <script src="/themes/<%- page.theme %>/public/js/all.min.js"></script>
 
     <%- page.codes.footer %>
 
