--- a/views/includes/header.ejs
+++ b/views/includes/header.ejs
@@ -1,7 +1,7 @@
 <div class="header">
     <div class="header44">
         <div class="main_menu">
-            <a href="/"><img src="/themes/drogo/public/images/logo.png?v=<%- page.ver %>" style="height: 26px" alt="Logo"></a>
+            <a href="/"><img src="/themes/<%- page.theme %>/public/images/logo.png?v=<%- page.ver %>" style="height: 26px" alt="Logo"></a>
         </div>
         <div class="user_panel">
             <div class="loginin continueViewingBlock" style="display: none;">
