--- a/views/includes/head.ejs
+++ b/views/includes/head.ejs
@@ -1,5 +1,5 @@
 <title><%= page.title %></title>
 <meta name="description" content="<%= page.description %>">
-<link rel="shortcut icon" href="/themes/drogo/public/favicon.ico?v=<%- page.ver %>"/>
-<link rel="stylesheet" href="/themes/drogo/public/css/all.min.css?v=<%- page.ver %>">
+<link rel="shortcut icon" href="/themes/<%- page.theme %>/public/favicon.ico?v=<%- page.ver %>"/>
+<link rel="stylesheet" href="/themes/<%- page.theme %>/public/css/all.min.css?v=<%- page.ver %>">
 <%- page.codes.head %>
