--- a/views/includes/left.ejs
+++ b/views/includes/left.ejs
@@ -69,7 +69,7 @@ border-bottom: 1px solid #3f413f;"><i style="font-size:15px;"><%- page.l.soon %>
     <% if (typeof news === 'object' && news.length) { %>
     <% news.forEach(function (content) { %>
     <div style="margin: 10px;">
-        <a href="<%- content.url %>" class="cinemapress-news" style="background-image:url(<%- content.image %>);">
+        <a href="<%- content.url %>" class="cinemapress-news" style="background-image:url('<%- content.image %>');">
             <div class="cinemapress-news-title">
                 <%= content.title %>
             </div>
