--- a/views/movie.ejs
+++ b/views/movie.ejs
@@ -92,6 +92,10 @@
                                 <% if (movie.actors_url) { %>
                                 <strong><%- page.l.actors %>:</strong> <%- movie.actors_url %><br>
                                 <% } %>
+                                <br>
+                                <% if (movie.tags_url) { %>
+                                <strong><%- page.l.tags %>:</strong> <%- movie.tags_url %><br>
+                                <% } %>
                             </div>
 
                             <div style="clear: both"></div>
@@ -185,7 +189,7 @@
                 <% contents.forEach(function (content) { %>
                 <div style="float: left; width: 50%;">
                     <div style="margin: 0; padding: 10px">
-                        <a href="<%- content.url %>" class="cinemapress-news" style="background-image:url(<%- content.image %>);">
+                        <a href="<%- content.url %>" class="cinemapress-news" style="background-image:url('<%- content.image %>');">
                             <div class="cinemapress-news-title">
                                 <%= content.title %>
                             </div>
@@ -204,9 +208,9 @@
                     <i><span class="selection_index"></span><%- category.name %></i>
                     <div class="randomMovieRelated">
                         <div class="cinemapress-random-related"
-                             onclick="window.location.href='<%- category.url %>?random'"
+                             onclick="window.location.href='<%- (category.url.indexOf('?')+1 ? category.url + '&random' : category.url + '?random') %>'"
                              title="<%- page.l.random %>">
-                            <img src="/themes/drogo/public/images/dice.svg" alt="<%- page.l.random %>">
+                            <img src="/themes/<%- page.theme %>/public/images/dice.svg" alt="<%- page.l.random %>">
                         </div>
                     </div>
                 </div>
