--- a/views/index.ejs
+++ b/views/index.ejs
@@ -30,7 +30,7 @@
 
                     <% if (typeof index === 'object') {
                         for (var type in index) {
-                            if (index.hasOwnProperty(type) && index[type].length) {
+                            if (index.hasOwnProperty(type) && index[type].length && type !== 'episode') {
                                 index[type].forEach(function (category) { %>
 
                     <h2>
